--- a/deployment/deployment.yml
+++ b/deployment/deployment.yml
@@ -3,13 +3,13 @@ kind: Deployment
 metadata:
   name: cloud-devops-capstone
   labels:
-    app: cloud-devops-capstone
+    app: udacity-capstone
   namespace: default
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: cloud-devops-capstone
+      app: udacity-capstone
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -18,28 +18,28 @@ spec:
   template:
     metadata:
       labels:
-        app: cloud-devops-capstone
+        app: udacity-capstone
     spec:
       containers:
         - image: pawankolhe/udacity-capstone
           imagePullPolicy: Always
-          name: cloud-devops-capstone
+          name: udacity-capstone
           ports:
-            - containerPort: 3000
+            - containerPort: 80
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: cloud-devops-capstone
+  name: udacity-capstone
   labels:
-    app: cloud-devops-capstone
+    app: udacity-capstone
 spec:
   type: LoadBalancer
   selector:
-    app: cloud-devops-capstone
+    app: udacity-capstone
   ports:
-    - port: 3000
-      targetPort: 3000
-      # nodePort: 30000
+    - port: 80
+      targetPort: 80
       protocol: TCP
+      
